Update account functional tests